--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SweetHomeClient">
-        <activity android:name=".regist.RegistActivity" />
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".login.LoginActivity">
+        <activity android:name=".mvp.regist.RegistActivity" />
+        <activity android:name=".mvp.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".mvp.home.HomeActivity" />
     </application>
 
 </manifest>
