--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,6 +25,8 @@
         </activity>
         <activity android:name=".mvp.home.HomeActivity" />
         <activity android:name=".mvp.singletalk.SingleTalkActivity" />
+        <activity android:name=".mvp.singletalk.PhotoActivity" />
+        <activity android:name=".mvp.singletalk.FriendDetailActivity" />
     </application>
 
 </manifest>
