--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,11 @@
     package="com.banmo.sweethomeclient">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <!-- 录音 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <!--播音-->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -28,7 +32,7 @@
         <activity android:name=".mvp.login.LoginActivity" />
         <activity android:name=".mvp.singletalk.SingleTalkActivity" />
         <activity android:name=".mvp.singletalk.PhotoActivity" />
-        <activity android:name=".mvp.singletalk.FriendDetailActivity" />
+        <activity android:name=".mvp.detail.FriendDetailActivity" />
     </application>
 
 </manifest>
